force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/ffrr__RevenueRecognitionTransaction__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffrr__helprevrectransaction</customHelpPage>
    <description>Contains the header details of recognition transactions.</description>
    <label>Recognition Transaction</label>
    <nameField>
        <displayFormat>RT-{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recognition Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>