force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/fields/CostJournalDate__c.field-meta.xml
<CustomField>
    <fullName>CostJournalDate__c</fullName>
    <formula>link_CostJournal_id__r.c2g__JournalDate__c</formula>
    <label>Cost Journal Date</label>
    <type>Date</type>
</CustomField>