force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/fields/CostJournalStatus__c.field-meta.xml
<CustomField>
    <fullName>CostJournalStatus__c</fullName>
    <formula>TEXT(link_CostJournal_id__r.c2g__JournalStatus__c)</formula>
    <label>Cost Journal Status</label>
    <type>Text</type>
</CustomField>