force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/fields/link_CostJournal_id__c.field-meta.xml
<CustomField>
    <fullName>link_CostJournal_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Recognition Transactions (Cost Journal)</relationshipLabel>
    <relationshipName>RevRecTransactionsForCost</relationshipName>
    <type>Lookup</type>
</CustomField>