force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/listViews/ffrr__RevenueRecognizedError.listView-meta.xml
<ListView>
    <fullName>ffrr__RevenueRecognizedError</fullName>
    <columns>NAME</columns>
    <columns>ffrr__RecognizedDate__c</columns>
    <columns>ffrr__Period__c</columns>
    <columns>ffrr__Description__c</columns>
    <columns>ffrr__Status__c</columns>
    <columns>ffrr__TotalBalanceSheet__c</columns>
    <columns>ffrr__TotalIncomeStatement__c</columns>
    <columns>ffrr__Currency__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffrr__Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Recognition Transactions - Error</label>
    <language>en_US</language>
</ListView>