force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/listViews/ffrr__TransferredInProgress.listView-meta.xml
<ListView>
    <fullName>ffrr__TransferredInProgress</fullName>
    <columns>NAME</columns>
    <columns>ffrr__RecognizedDate__c</columns>
    <columns>ffrr__RecognitionPeriod__c</columns>
    <columns>ffrr__Description__c</columns>
    <columns>ffrr__Status__c</columns>
    <columns>ffrr__TotalBalanceSheet__c</columns>
    <columns>ffrr__TotalIncomeStatement__c</columns>
    <columns>ffrr__Currency__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffrr__Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>ffrr__OriginatingProcess__c</field>
        <operation>equals</operation>
        <value>Transfer Previously Recognized</value>
    </filters>
    <label>Transferred - In Progress</label>
</ListView>