force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/listViews/ffrrwksp__RecentlyCreatedTransactions.listView-meta.xml
<ListView>
    <fullName>ffrrwksp__RecentlyCreatedTransactions</fullName>
    <columns>NAME</columns>
    <columns>ffrr__RecognitionPeriod__c</columns>
    <columns>ffrr__Description__c</columns>
    <columns>ffrr__GroupedBy__c</columns>
    <columns>ffrr__Status__c</columns>
    <columns>ffrr__TotalIncomeStatement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Recently Created Transactions</label>
</ListView>