force-app/main/default/objects/ffrr__RevenueRecognitionTransaction__c/listViews/ffrrwksp__RecentPendingJournals.listView-meta.xml
<ListView>
    <fullName>ffrrwksp__RecentPendingJournals</fullName>
    <columns>NAME</columns>
    <columns>ffrr__RecognizedDate__c</columns>
    <columns>ffrr__Period__c</columns>
    <columns>ffrr__Description__c</columns>
    <columns>ffrr__GroupedBy__c</columns>
    <columns>ffrr__TotalIncomeStatement__c</columns>
    <columns>ffrr__TotalAmortizedIncomeStatement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ffrr__RecognizedDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>ffrr__Status__c</field>
        <operation>equals</operation>
        <value>Committed</value>
    </filters>
    <label>Recent Pending Journals</label>
    <language>en_US</language>
</ListView>